core/roboconf-core/src/test/resources/configurations/invalid/inexisting-child-in-component.graph

root {
	installer: target;
	children: server;
}
